--- a/Bioshock/BioshockHQ.ini
+++ b/Bioshock/BioshockHQ.ini
@@ -263,7 +263,7 @@ ThumbnailFilename=game:\System\savegame.png
 [Engine.Engine]
 UsePerforce=1
 GameDriverClassName=ShockGame.ShockGameDriver
-RenderDevice=D3DDrv.D3DRenderDevice
+RenderDevice=D3DDrv10.D3DRenderDevice10
 AudioDevice=FMODAudio.FMODAudioSubsystem
 AudioDevice_Xenon=FMODAudio.FMODAudioSubsystem
 ;NetworkDevice=IpDrv.TcpNetDriver
@@ -372,25 +372,25 @@ SpikeLimit=75
 [XenonPerformanceLimits]
 Core.Log (native)=0.3
 Core.Logs (script)=0.5
-Engine.MainGameUpdate=33
-Engine.ActorTick=15
-Engine.Move=6
-Engine.Particles (All)=6
-Engine.Particles (Active)=4
+Engine.MainGameUpdate=100
+Engine.ActorTick=100
+Engine.Move=100
+Engine.Particles (All)=100
+Engine.Particles (Active)=100
 Engine.Flash Update=2.5
-Render.Scene GPU=33
-Render.Scene Render=33
-Render.Particle Render=4
-Render.Skinning=5
-Render.Flash=4
-Havok.TotalCycles=6
+Render.Scene GPU=100
+Render.Scene Render=100
+Render.Particle Render=100
+Render.Skinning=100
+Render.Flash=100
+Havok.TotalCycles=100
 Core.String concat (script)=0.25
 
 [PcPerformanceLimits]
 
 [Engine.GameEngine]
 EnableDevTools=False
-CacheSizeMegs=4096
+CacheSizeMegs=512
 UseSound=True
 ;ServerActors=IpDrv.UdpBeacon
 ;ServerActors=IpServer.UdpServerQuery
@@ -415,11 +415,11 @@ ServerPackages=ShockAI
 [WinDrv.WindowsClient]
 WindowedViewportX=1024
 WindowedViewportY=768
-FullscreenViewportX=1920
-FullscreenViewportY=1080
+FullscreenViewportX=1366
+FullscreenViewportY=768
 MenuViewportX=640
 MenuViewportY=480
-Brightness=0.424000
+Brightness=0.500000
 Contrast=0.500000
 Gamma=1.000000
 UseJoystick=False
@@ -435,21 +435,21 @@ DecoLayers=True
 Projectors=True
 NoDynamicLights=False
 ReportDynamicUploads=False
-TextureDetailInterface=UltraHigh
-TextureDetailTerrain=UltraHigh
-TextureDetailWeaponSkin=UltraHigh
-TextureDetailPlayerSkin=UltraHigh
-TextureDetailWorld=UltraHigh
-TextureDetailRenderMap=UltraHigh
-TextureDetailLightmap=UltraHigh
+TextureDetailInterface=Normal
+TextureDetailTerrain=Normal
+TextureDetailWeaponSkin=Normal
+TextureDetailPlayerSkin=Normal
+TextureDetailWorld=Normal
+TextureDetailRenderMap=Normal
+TextureDetailLightmap=Normal
 NoFractalAnim=False
 ScaleHUDX=0.0
 MouseYMultiplier=0.000000
 MouseXMultiplier=0.000000
 WindowedViewportYPosEditor=0
 WindowedViewportXPosEditor=0
-WindowedViewportYPos=1
-WindowedViewportXPos=1
+WindowedViewportYPos=-1
+WindowedViewportXPos=-1
 
 [XeDrv.XenonClient]
 WindowedViewportX=640
@@ -466,35 +466,35 @@ CaptureMouse=True
 StartupFullscreen=False
 ScreenFlashes=True
 NoLighting=False
-MinDesiredFrameRate=0.000000
+MinDesiredFrameRate=35.000000
 Decals=True
 Coronas=True
 DecoLayers=True
 Projectors=True
 NoDynamicLights=False
 ReportDynamicUploads=True
-TextureDetailInterface=UltraHigh
-TextureDetailTerrain=UltraHigh
-TextureDetailWeaponSkin=UltraHigh
-TextureDetailPlayerSkin=UltraHigh
-TextureDetailWorld=UltraHigh
-TextureDetailRenderMap=UltraHigh
+TextureDetailInterface=Normal
+TextureDetailTerrain=Normal
+TextureDetailWeaponSkin=Normal
+TextureDetailPlayerSkin=Normal
+TextureDetailWorld=Normal
+TextureDetailRenderMap=Normal
 TextureDetailLightmap=UltraHigh
 NoFractalAnim=False
 ScaleHUDX=0.0
 
 [Engine.Player]
-ConfiguredInternetSpeed=786432
-ConfiguredLanSpeed=786432
+ConfiguredInternetSpeed=25000
+ConfiguredLanSpeed=25000
 
 [ALAudio.ALAudioSubsystem]
-UseEAX=False
-Use3DSound=False
+UseEAX=True
+Use3DSound=True
 UseDefaultDriver=True
 CompatibilityMode=False
 UsePrecache=True
 ReverseStereo=false
-Channels=32
+Channels=128
 MusicVolume=0.3
 AmbientVolume=0.6
 SoundVolume=0.6
@@ -517,13 +517,13 @@ ConnectionTimeout=15.0
 InitialConnectTimeout=500.0
 AckTimeout=1.0
 KeepAliveTime=0.2
-MaxClientRate=786432
+MaxClientRate=25000
 SimLatency=0
 RelevantTimeout=5.0
 SpawnPrioritySeconds=1.0
 ServerTravelPause=4.0
-NetServerMaxTickRate=120
-LanServerMaxTickRate=120
+NetServerMaxTickRate=100
+LanServerMaxTickRate=100
 DownloadManagers=IpDrv.HTTPDownload
 DownloadManagers=Engine.ChannelDownload
 AllowPlayerPortUnreach=False
@@ -539,7 +539,7 @@ UseCompression=True
 
 [Engine.DemoRecDriver]
 DemoSpectatorClass=Engine.CHSpectator
-MaxClientRate=786432
+MaxClientRate=25000
 ConnectionTimeout=15.0
 InitialConnectTimeout=500.0
 AckTimeout=1.0
@@ -548,8 +548,8 @@ SimLatency=0
 RelevantTimeout=5.0
 SpawnPrioritySeconds=1.0
 ServerTravelPause=4.0
-NetServerMaxTickRate=120
-LanServerMaxTickRate=120
+NetServerMaxTickRate=100
+LanServerMaxTickRate=100
 
 [Engine.GameReplicationInfo]
 ServerName=Bioshock Server
@@ -574,9 +574,9 @@ SuperHighDetailActors=True
 UsePrecaching=True
 UseTrilinear=True
 AdapterNumber=-1
-ReduceMouseLag=False
+ReduceMouseLag=True
 DoubleBufferMouseLag=False
-DesiredRefreshRate=75
+DesiredRefreshRate=60
 UseVSync=False
 LevelOfAnisotropy=16
 TesselationFactor=1.0
@@ -590,9 +590,9 @@ UsePrecaching=True
 UseTrilinear=True
 UseHighDetailShadowMaps=True
 AdapterNumber=-1
-ReduceMouseLag=False
+ReduceMouseLag=True
 DoubleBufferMouseLag=False
-DesiredRefreshRate=240
+DesiredRefreshRate=60
 UseVSync=False
 LevelOfAnisotropy=16
 TesselationFactor=1.000000
@@ -680,7 +680,7 @@ bLowGore=False
 bVeryLowGore=False
 
 [Engine.LevelInfo]
-PhysicsDetailLevel=PDL_Medium
+PhysicsDetailLevel=PDL_UltraHigh
 
 [Engine.Console]
 ConsoleKey=109
@@ -701,7 +701,7 @@ RequireMinSpec=true
 ;SkipCall=Log
 
 [Havok]
-HavokNumThreads=2
+HavokNumThreads=4
 RebuildMoppWhenMissingOrOld=1
 
 [Engine.RenderConfig]
@@ -734,9 +734,9 @@ CascadingWaterSimulationVelocity=10.000000
 UseHighDetailPostProcEffects=True
 UseMultithreading=True
 DisableExtraAntiPortalClip=True
-TextureDetail=High
-FluidSurfaceDetail=High
-DynamicShadowDetail=High
+TextureDetail=UltraHigh
+FluidSurfaceDetail=UltraHigh
+DynamicShadowDetail=UltraHigh
 
 [ShockGame.ShockUserSettings]
 HasPlasmidPack1=False
@@ -745,7 +745,7 @@ Sensitivity=50
 Brightness=500
 Contrast=500
 Gamma=0
-VSync=True
+VSync=False
 ControlSensitivity=CS_MEDIUM
 MovementStick=MS_RIGHTTHUMBSTICK
 AutoCenter=False
@@ -758,9 +758,9 @@ SFXVolume=100
 MusicVolume=100
 VoVolume=100
 bReverb=True
-bEAXEnabled=False
-GameDifficulty=GD_MEDIUM
-AutoAim=True
+bEAXEnabled=True
+GameDifficulty=GD_HARD
+AutoAim=False
 AdaptiveTraining=True
 DialogSubtitles=False
 ArtSubtitles=False
@@ -768,3 +768,4 @@ NoVitaChamber=False
 QuestArrow=True
 bShowShimmer=True
 bHighlightFocussedItems=True
+
