--- a/Bioshock/BioshockHQ.ini
+++ b/Bioshock/BioshockHQ.ini
@@ -577,7 +577,7 @@ AdapterNumber=-1
 ReduceMouseLag=True
 DoubleBufferMouseLag=False
 DesiredRefreshRate=60
-UseVSync=False
+UseVSync=True
 LevelOfAnisotropy=16
 TesselationFactor=1.0
 CheckForOverflow=False
@@ -593,7 +593,7 @@ AdapterNumber=-1
 ReduceMouseLag=True
 DoubleBufferMouseLag=False
 DesiredRefreshRate=60
-UseVSync=False
+UseVSync=True
 LevelOfAnisotropy=16
 TesselationFactor=1.000000
 CheckForOverflow=False
@@ -745,7 +745,7 @@ Sensitivity=50
 Brightness=500
 Contrast=500
 Gamma=0
-VSync=False
+VSync=True
 ControlSensitivity=CS_MEDIUM
 MovementStick=MS_RIGHTTHUMBSTICK
 AutoCenter=False
