--- a/Bioshock/BioshockHQ.ini
+++ b/Bioshock/BioshockHQ.ini
@@ -574,7 +574,7 @@ SuperHighDetailActors=True
 UsePrecaching=True
 UseTrilinear=True
 AdapterNumber=-1
-ReduceMouseLag=True
+ReduceMouseLag=False
 DoubleBufferMouseLag=False
 DesiredRefreshRate=60
 UseVSync=True
@@ -590,7 +590,7 @@ UsePrecaching=True
 UseTrilinear=True
 UseHighDetailShadowMaps=True
 AdapterNumber=-1
-ReduceMouseLag=True
+ReduceMouseLag=False
 DoubleBufferMouseLag=False
 DesiredRefreshRate=60
 UseVSync=True
