--- a/Clive Barker's Undying/SystemRENEWAL.ini
+++ b/Clive Barker's Undying/SystemRENEWAL.ini
@@ -42,7 +42,7 @@ Language=int
 GameEngine=Engine.GameEngine
 EditorEngine=Editor.EditorEngine
 WindowedRenderDevice=SoftDrv.SoftwareRenderDevice
-RenderDevice=GlideDrv.GlideRenderDevice
+RenderDevice=VulkanDrv.VulkanRenderDevice
 DefaultGame=Aeons.SinglePlayer
 DefaultServerGame=Aeons.DeathMatchGame
 ViewportManager=WinDrv.WindowsClient
@@ -1340,7 +1340,7 @@ LODBias=0
 BloomAmount=128
 Bloom=False
 OccludeLines=False
-Hdr=False
+Hdr=True
 GrayFormula=1
 Saturation=255
 Contrast=128
