--- a/Soldier of Fortune/autoexecHQ.cfg
+++ b/Soldier of Fortune/autoexecHQ.cfg
@@ -34,8 +34,8 @@ set cl_entities "1"
 set cl_footsteps "1"
 set cl_gun "1"
 set cl_lights "1"
-set cl_max_debris "8192"
-set cl_max_quads "8192"
+set cl_max_debris "999999999"
+set cl_max_quads "999999999"
 set cl_maxfps "60"
 set cl_minfps "1"
 set cl_run "1"
