--- a/System Shock 2/autoexecREMASTER.cfg
+++ b/System Shock 2/autoexecREMASTER.cfg
@@ -1,6 +1,6 @@
 cl_engineHZ "60"
 cl_fixedFPS "999"
-cl_fontHinting "-1"
+cl_joysmoothing "0"
 cl_updateCPUUsageFrequency "1"
 in_nojoy "1"
 jobs_concurrentThreads "-1"
