--- a/System Shock 2/autoexecREMASTER.cfg
+++ b/System Shock 2/autoexecREMASTER.cfg
@@ -22,6 +22,7 @@ r_rhirenderfamily "vulkan"
 udp_allowipv4 "0"
 udp_allowipv6 "0"
 v_height "768"
+v_refresh "60"
 v_vsync "0"
 v_width "1366"
 v_windowmode "3"
