--- a/Clive Barker's Undying/User.ini
+++ b/Clive Barker's Undying/User.ini
@@ -63,11 +63,11 @@ RightMouse=FireAttSpell | SetFavorite
 MiddleMouse=
 Tab=Type
 Enter=InventoryActivate
-Shift=Duck
-Ctrl=Jump
+Shift=
+Ctrl=Duck
 Pause=Pause
 CapsLock=WeaponAction
-Alt=WeaponAction
+Alt=
 Escape=ShowMenu
 Space=Jump
 Left=StrafeLeft
@@ -100,8 +100,8 @@ M=
 N=
 O=
 P=
-Q=InventoryActivate
-R=SelectAttSpell
+Q=SelectAttSpell
+R=WeaponAction
 S=MoveBackward
 T=
 U=
@@ -217,10 +217,135 @@ JoyPovRight=
 JoyPovLeft=
 JoyPovUp=
 JoyPovDown=
+UnknownF5=
+UnknownF4=
+Unknown10F=
+Unknown10E=
+UnknownEB=
+UnknownEA=
+UnknownDF=
+UnknownDA=
+UnknownD9=
+UnknownD8=
+UnknownC7=
+UnknownC6=
+UnknownC5=
+UnknownC4=
+UnknownC3=
+UnknownC2=
+UnknownC1=
+UnknownB9=
+UnknownB8=
+UnknownB7=
+UnknownB6=
+UnknownB5=
+UnknownB4=
+UnknownB3=
+UnknownB2=
+UnknownB1=
+UnknownB0=
+UnknownAF=
+UnknownAE=
+UnknownAD=
+UnknownAC=
+UnknownAB=
+UnknownAA=
+UnknownA9=
+UnknownA8=
+UnknownA7=
+UnknownA6=
+UnknownA5=
+UnknownA4=
+Unknown9F=
+Unknown9E=
+Unknown9D=
+Unknown9C=
+Unknown9B=
+Unknown9A=
+Unknown99=
+Unknown98=
+Unknown97=
+Unknown96=
+Unknown95=
+Unknown94=
+Unknown93=
+Unknown92=
+Unknown8F=
+Unknown8E=
+Unknown8D=
+Unknown8C=
+Unknown8B=
+Unknown8A=
+Unknown89=
+Unknown88=
+F12=
+F11=
+F10=
+F5=
+F4=
+Unknown5F=
+Unknown5E=
+Unknown5D=
+Unknown5C=
+Unknown5B=
+Unknown40=
+Unknown3F=
+Unknown3E=
+Unknown3D=
+Unknown3C=
+Unknown3B=
+Unknown3A=
+Unknown1F=
+Unknown1E=
+Unknown1D=
+Unknown1C=
+Unknown1A=
+Unknown19=
+Unknown18=
+Unknown17=
+Unknown16=
+Unknown15=
+Unknown0F=
+Unknown0E=
+Unknown0C=
+Unknown0B=
+Unknown0A=
+Unknown07=
+Unknown06=
+Unknown05=
+StrProperty0=
+Aliases[52]=(Command="",Alias=None)
+Aliases[53]=(Command="",Alias=None)
+Aliases[54]=(Command="",Alias=None)
+Aliases[55]=(Command="",Alias=None)
+Aliases[56]=(Command="",Alias=None)
+Aliases[57]=(Command="",Alias=None)
+Aliases[58]=(Command="",Alias=None)
+Aliases[59]=(Command="",Alias=None)
+Aliases[60]=(Command="",Alias=None)
+Aliases[61]=(Command="",Alias=None)
+Aliases[62]=(Command="",Alias=None)
+Aliases[63]=(Command="",Alias=None)
+Aliases[64]=(Command="",Alias=None)
+Aliases[65]=(Command="",Alias=None)
+Aliases[66]=(Command="",Alias=None)
+Aliases[67]=(Command="",Alias=None)
+Aliases[68]=(Command="",Alias=None)
+Aliases[69]=(Command="",Alias=None)
+Aliases[70]=(Command="",Alias=None)
+Aliases[71]=(Command="",Alias=None)
+Aliases[72]=(Command="",Alias=None)
+Aliases[73]=(Command="",Alias=None)
+Aliases[74]=(Command="",Alias=None)
+Aliases[75]=(Command="",Alias=None)
+Aliases[76]=(Command="",Alias=None)
+Aliases[77]=(Command="",Alias=None)
+Aliases[78]=(Command="",Alias=None)
+Aliases[79]=(Command="",Alias=None)
 
 [Engine.HUD]
 HudMode=1
-Crosshair=1
+Crosshair=3
 
 [Engine.PlayerPawn]
 Password=
@@ -232,7 +357,7 @@ bSnapToLevel=False
 bAlwaysMouseLook=True
 bKeyboardLook=True
 bInvertMouse=False
-bMouseDecel=True
+bMouseDecel=False
 bMouseSmoothing=False
 bMaxMouseSmoothing=False
 bNoFlash=False
@@ -260,7 +385,7 @@ WeaponPriority[18]=None
 WeaponPriority[19]=None
 NetSpeed=25000
 LanSpeed=25000
-MouseSmoothThreshold=0.00
+MouseSmoothThreshold=0
 DesiredFOV=90
 DefaultFOV=90
 ZoomFOV=30
@@ -317,4 +442,7 @@ VoiceType=Class'Engine.VoicePack'
 
 [Engine.Pawn]
 bNeverSwitchOnPickup=False
+
+[Aeons.AeonsHUD]
+bCrossOn=False
 
