--- a/Clive Barker's Undying/User.ini
+++ b/Clive Barker's Undying/User.ini
@@ -63,7 +63,7 @@ RightMouse=FireAttSpell | SetFavorite
 MiddleMouse=
 Tab=Type
 Enter=InventoryActivate
-Shift=
+Shift=Walk
 Ctrl=Duck
 Pause=Pause
 CapsLock=WeaponAction
