--- a/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
+++ b/Soldier of Fortune 2: Double Helix/base/autoexecHQ.cfg
@@ -117,6 +117,8 @@ seta sv_maxrate "0"
 seta sv_precache "1"
 seta sv_allowDownload "0"
 
+seta crosshair "3"
+
 seta rate "25000"
 seta snaps "125"
 seta net_noipx "1"
