--- a/Medal of Honor: Allied Assault/autoexecHQ.cfg
+++ b/Medal of Honor: Allied Assault/autoexecHQ.cfg
@@ -9,7 +9,7 @@ echo "r_ext_compressed_textures 1 ENABLES HQ TEXTURES"
 echo "r_tonemap 1 is BAD, changes colors"
 echo "TWEAK r_customwidth AND r_customheight BEFORE LAUNCH"
 
-echo "Vanilla MOHAA config dir:"
+echo "Vanilla MOHAA config dir: C:\GOG Games\Medal of Honor - Allied Assault War Chest\main\configs"
 
 echo "OpenMOHAA config dir: %USERPROFILE%\AppData\Roaming\openmohaa\main\configs"
 
