--- a/Left 4 Dead 2/autoexecPERF.cfg
+++ b/Left 4 Dead 2/autoexecPERF.cfg
@@ -23,6 +23,8 @@ cl_crosshair_green "250"
 cl_crosshair_red "50"
 cl_crosshair_thickness "0"
 cl_debugrumble "0"
+cl_detaildist "0"
+cl_detailfade "0"
 cl_downloadfilter "mapsonly"
 cl_forcepreload "1"
 cl_interp "0.1"
