--- a/Left 4 Dead 2/autoexecHQ.cfg
+++ b/Left 4 Dead 2/autoexecHQ.cfg
@@ -23,6 +23,8 @@ cl_crosshair_green "250"
 cl_crosshair_red "50"
 cl_crosshair_thickness "0"
 cl_debugrumble "0"
+cl_detaildist "999999999"
+cl_detailfade "999999999"
 cl_downloadfilter "nosounds"
 cl_forcepreload "1"
 cl_interp "0.1"
