--- a/Team Fortress 2/autoexecPRO.cfg
+++ b/Team Fortress 2/autoexecPRO.cfg
@@ -166,6 +166,8 @@ net_maxpacketdrop "0"
 net_compresspackets_minsize "1260"
 net_maxfragments "1260"
 net_maxroutable "1260"
+props_break_max_pieces "0"
+props_break_max_pieces_perframe "0"
 r_3dsky "0"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
