--- a/Team Fortress 2/autoexecHQ.cfg
+++ b/Team Fortress 2/autoexecHQ.cfg
@@ -165,6 +165,8 @@ net_compresspackets_minsize "1260"
 net_maxfragments "1260"
 net_maxroutable "1260"
 net_maxpacketdrop "0"
+props_break_max_pieces "-1"
+props_break_max_pieces_perframe "-1"
 r_3dsky "1"
 r_cheapwaterend "99999999999999999999"
 r_cheapwaterstart "99999999999999999999"
