--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -27,6 +27,8 @@ echo "sv_clockcorrection_msecs: 0 disables movement smoothing"
 echo "cl_particle_fallback_base: 0 = HQ / 4 = LOWEST"
 echo "cl_particle_fallback_multiplier: 1 = HQ / 3 = LOWEST"
 
+echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
+
 echo "cl_interp_ratio: 0 / STOP INTERPING NOOB"
 
 cl_allow_animated_avatars "0"
