--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -26,6 +26,7 @@ echo "sv_pvs_max_distance: maximum range to Potentially Visible Set (PVS) and Po
 echo "sv_clockcorrection_msecs: 0 disables movement smoothing"
 echo "cl_particle_fallback_base: 0 = HQ / 4 = LOWEST"
 echo "cl_particle_fallback_multiplier: 1 = HQ / 3 = LOWEST"
+echo "videocfg_hdr_detail: 3 = PERFORMANCE / -1 = QUALITY / 0 = BUGGY (HIGH BRIGHTNESS, LOWER FPS)"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
