--- a/Left 4 Dead 2/autoexecPERF.cfg
+++ b/Left 4 Dead 2/autoexecPERF.cfg
@@ -40,6 +40,7 @@ con_enable "1"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "1"
 fps_max "999"
+func_break_max_pieces "0"
 gameinstructor_enable "0"
 gl_swap_limit "0"
 joystick "0"
