--- a/Left 4 Dead 2/autoexecHQ.cfg
+++ b/Left 4 Dead 2/autoexecHQ.cfg
@@ -40,6 +40,7 @@ con_enable "1"
 dsp_enhance_stereo "1"
 dsp_slow_cpu "0"
 fps_max "999"
+func_break_max_pieces "999999999"
 gameinstructor_enable "0"
 gl_swap_limit "0"
 joystick "0"
