--- a/Left 4 Dead 2/autoexecPERF.cfg
+++ b/Left 4 Dead 2/autoexecPERF.cfg
@@ -51,6 +51,7 @@ m_mouseaccel1 "0"
 m_mouseaccel2 "0"
 m_mousespeed "0"
 m_rawinput "1"
+mat_grain_scale_override "0"
 mat_queue_mode "2"
 motd_enabled "0"
 motd_intros "0"
