--- a/Left 4 Dead 2/autoexecPERF.cfg
+++ b/Left 4 Dead 2/autoexecPERF.cfg
@@ -62,6 +62,8 @@ net_steamcnx_allowrelay "0"
 net_steamcnx_enabled "0"
 props_break_max_pieces "0"
 props_break_max_pieces_perframe "0"
+r_cheapwaterend "1"
+r_cheapwaterstart "1"
 rate "1048576"
 sensitivity "4"
 snd_mixahead "0.045"
