--- a/Left 4 Dead 2/autoexecPERF.cfg
+++ b/Left 4 Dead 2/autoexecPERF.cfg
@@ -64,6 +64,7 @@ props_break_max_pieces "0"
 props_break_max_pieces_perframe "0"
 r_cheapwaterend "1"
 r_cheapwaterstart "1"
+r_eyemove "0"
 rate "1048576"
 sensitivity "4"
 snd_mixahead "0.045"
