--- a/Left 4 Dead 2/autoexecHQ.cfg
+++ b/Left 4 Dead 2/autoexecHQ.cfg
@@ -65,6 +65,7 @@ props_break_max_pieces_perframe "-1"
 r_cheapwaterend "999999999"
 r_cheapwaterstart "999999999"
 r_eyemove "1"
+r_skyboxfogfactor "1"
 rate "1048576"
 sensitivity "4"
 snd_mixahead "0.045"
