--- a/Left 4 Dead 2/autoexecHQ.cfg
+++ b/Left 4 Dead 2/autoexecHQ.cfg
@@ -7,6 +7,7 @@ echo "never use fps_max 0, increases latency, bugs some servers to force fps_max
 echo "make sure config.cfg and autoexec.cfg are READ-ONLY to prevent admin slowhacking"
 echo "use GCFScape to open and view VPK files"
 echo "cl_downloadfilter: Filter types are: all, none, nosounds, and mapsonly"
+echo "z_wound_client_disabled: Gore level - client-side wound effects / 1 = LOW / 0 = DEFAULT"
 
 echo "unlimited ragdolls and enhanced sound enabled"
 
@@ -80,6 +81,7 @@ sv_mincmdrate "128"
 sv_minrate "1048576"
 sv_rcon_log "0"
 sv_unlockedchapters "99"
+z_wound_client_disabled "0"
 
 bind mwheelup "+jump"
 bind mwheeldown "+jump"
