--- a/Left 4 Dead 2/autoexecHQ.cfg
+++ b/Left 4 Dead 2/autoexecHQ.cfg
@@ -69,6 +69,9 @@ r_eyemove "1"
 r_skyboxfogfactor "1"
 rate "1048576"
 sensitivity "4"
+sc_disable "1"
+sc_enable "0"
+sc_enable2 "0"
 snd_mixahead "0.045"
 sv_allow_wait_command "0"
 sv_forcepreload "1"
