--- a/Day of Defeat: Source/autoexecPERF.cfg
+++ b/Day of Defeat: Source/autoexecPERF.cfg
@@ -235,6 +235,9 @@ rope_shake "0"
 rope_subdiv "1"
 rope_wind_dist "1"
 sensitivity "4"
+sc_disable "1"
+sc_enable "0"
+sc_enable2 "0"
 snd_async_fullyasync "1"
 snd_async_spew_blocking "0"
 snd_mixahead "0.045"
