--- a/Left 4 Dead 2/glow.cfg
+++ b/Left 4 Dead 2/glow.cfg
@@ -47,6 +47,6 @@ cl_witch_glow_angry_r "1.00"
 cl_witch_glow_angry_g "0.00"
 cl_witch_glow_angry_b "0.00"
 cl_glow_survivor_health_bleed_pulse "1"
-cl_glow_survivor_health_bleed_pulse_amount "0.85"
-cl_glow_survivor_health_bleed_pulse_speed "15"
+cl_glow_survivor_health_bleed_pulse_amount "0.85
+cl_glow_survivor_health_bleed_pulse_speed "15
 cl_glow_survivor_health_include_buffer "1"
