--- a/The Thing/remaster/autoexec.cfg
+++ b/The Thing/remaster/autoexec.cfg
@@ -2,6 +2,7 @@ echo "The Thing: Remastered HQ Config"
 echo "r_tonemapping is Color Grading, 0 fixes washes out colors"
 echo "r_ao* is Ambient Occulsion settings"
 echo "r_spec_power 0 removes ugly white shine and washed out lights"
+echo "Bloom not in original, DISABLE"
 
 echo "%USERPROFILE%\Saved Games\Nightdive Studios\The Thing"
 
@@ -37,7 +38,7 @@ seta net_voipmic "0"
 seta net_voipptt "0"
 
 seta cl_joysmoothing "0"
-seta r_bloom "1"
+seta r_bloom "0"
 seta r_dof "0"
 seta r_tonemapping "0"
 seta r_antialiasing "7"
