--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -27,6 +27,8 @@ echo "sv_clockcorrection_msecs: 0 disables movement smoothing"
 echo "cl_particle_fallback_base: 0 = HQ / 4 = LOWEST"
 echo "cl_particle_fallback_multiplier: 1 = HQ / 3 = LOWEST"
 echo "videocfg_hdr_detail: 3 = PERFORMANCE / -1 = QUALITY / 0 = BUGGY (HIGH BRIGHTNESS, LOWER FPS)"
+echo "snd_voipvolume = Other Player Voice Volume / can be higher than 1.0"
+echo "cl_teamid_overhead_mode = Show Team ID Through Walls - 0 = OFF / 1 = Pips / 2 = Pips, Names, and Health / 3 = Pips, Names, Health, and Equipment"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
@@ -73,6 +75,7 @@ cl_showloadout "1"
 cl_smooth "0"
 cl_sniper_auto_rezoom "1"
 cl_teamcounter_playercount_instead_of_avatars "1"
+cl_teamid_overhead_mode "0"
 cl_tickpacket_desired_queuelength "0"
 cl_tickpacket_recvmargin_enable "0"
 cl_tickpacket_recvmargin_spew_interval "0"
@@ -105,14 +108,14 @@ r_drawtracers_firstperson "0"
 r_player_visibility_mode "0"
 r_show_build_info "0"
 sensitivity "4"
-snd_deathcamera_volume "0"
+snd_deathcamera_volume "1"
 snd_ducktovolume "0.55"
 snd_gamevoicevolume "1"
 snd_gamevolume "1"
 snd_mapobjective_volume "0"
 snd_menumusic_volume "0"
 snd_musicvolume "1"
-snd_mvp_volume "0"
+snd_mvp_volume "1"
 snd_roundaction_volume "0"
 snd_roundend_volume "0"
 snd_roundstart_volume "0"
@@ -122,7 +125,7 @@ snd_spatialize_lerp "1"
 snd_tensecondwarning_volume "0.04"
 snd_toolvolume "1"
 snd_headphone_eq "0"
-snd_voipvolume "0.5"
+snd_voipvolume "1.0"
 snd_mixahead "0.001"
 sv_clockcorrection_msecs "0"
 sv_cq_trim_bloat_remainder "0"
