--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -29,6 +29,10 @@ echo "cl_particle_fallback_multiplier: 1 = HQ / 3 = LOWEST"
 echo "videocfg_hdr_detail: 3 = PERFORMANCE / -1 = QUALITY / 0 = BUGGY (HIGH BRIGHTNESS, LOWER FPS)"
 echo "snd_voipvolume = Other Player Voice Volume / can be higher than 1.0"
 echo "cl_teamid_overhead_mode = Show Team ID Through Walls - 0 = OFF / 1 = Pips / 2 = Pips, Names, and Health / 3 = Pips, Names, Health, and Equipment"
+echo "cl_teamcounter_playercount_instead_of_avatars = Large Player Count"
+echo "cl_weapon_selection_rarity_color = Glow Weapon with Rarity Color"
+echo "ui_setting_advertiseforhire_auto = Looking to Play when Counter-Strike Starts"
+echo "cl_player_ping_mute = Player Pings - 2 = DISABLED"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
@@ -81,6 +85,7 @@ cl_tickpacket_recvmargin_enable "0"
 cl_tickpacket_recvmargin_spew_interval "0"
 cl_use_opens_buy_menu "0"
 cl_usercmd_max_per_movemsg "8"
+cl_weapon_selection_rarity_color "1"
 clientport "65007"
 con_enable "1"
 cq_buffer_bloat_msecs "0"
@@ -135,6 +140,7 @@ sv_disable_observer_interpolation "1"
 sv_maxunlag "0"
 sv_pvs_max_distance "0"
 rate "1048576"
+ui_setting_advertiseforhire_auto "0"
 ui_vanitysetting_team "ct"
 ui_vanitysetting_loadoutslot_ct "rifle1"
 volume "1"
