--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -33,6 +33,8 @@ echo "cl_teamcounter_playercount_instead_of_avatars = Large Player Count"
 echo "cl_weapon_selection_rarity_color = Glow Weapon with Rarity Color"
 echo "ui_setting_advertiseforhire_auto = Looking to Play when Counter-Strike Starts"
 echo "cl_player_ping_mute = Player Pings - 2 = DISABLED"
+echo "cl_hud_radar_map_additive = Radar Hud Map Blends With Background"
+echo "cl_hud_radar_blur_background = Blur Background"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
@@ -50,6 +52,8 @@ cl_error_report_time "0"
 cl_hide_avatar_images "1"
 cl_http_log_enable "0"
 cl_hud_color "1"
+cl_hud_radar_blur_background "0"
+cl_hud_radar_map_additive "0"
 cl_hud_radar_scale "1.3"
 cl_hud_telemetry_frametime_show "0"
 cl_hud_telemetry_net_misdelivery_poor "0"
@@ -67,7 +71,7 @@ cl_obs_interp_enable "0"
 cl_obs_interp_pos_rate "0"
 cl_particle_fallback_base "4"
 cl_particle_fallback_multiplier "3"
-cl_player_ping_mute "1"
+cl_player_ping_mute "2"
 cl_player_ragdolls_collide "0"
 cl_playerspraydisable "1"
 cl_prefer_lefthanded "0"
