--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -52,6 +52,7 @@ cl_error_report_time "0"
 cl_hide_avatar_images "1"
 cl_http_log_enable "0"
 cl_hud_color "1"
+cl_hud_radar_background_alpha "1"
 cl_hud_radar_blur_background "0"
 cl_hud_radar_map_additive "0"
 cl_hud_radar_scale "1.3"
