--- a/Left 4 Dead 2/binds.cfg
+++ b/Left 4 Dead 2/binds.cfg
@@ -1,4 +1,4 @@
-// Aliases
+echo "Aliases"
 alias "+showscores_custom" "+showscores; net_graph 3"
 alias "-showscores_custom" "-showscores; net_graph 0"
 alias "recordfix" "r_cleardecals; record demofix; stop"
@@ -16,10 +16,12 @@ alias checkleft "none"
 alias checkright "none"
 alias none ""
 
-// Binds
-bind "F5" "recordfix" // Fixing invisible SI, most vulnerable SI is - Tank. Somehow, it also lowers your ping
+echo "Binds"
+echo "Fixing invisible SI, most vulnerable SI is - Tank. Somehow, it also lowers your ping"
+bind "F5" "recordfix"
 bind "TAB" "+showscores_custom"
-bind "W" "+mfwd" // Fixing sound position because of DSP
-bind "A" "+mleft" // Fixing sound position because of DSP
-bind "S" "+mback" // Fixing sound position because of DSP
-bind "D" "+mright" // Fixing sound position because of DSP
+echo "Fixing sound position because of DSP"
+bind "W" "+mfwd"
+bind "A" "+mleft"
+bind "S" "+mback"
+bind "D" "+mright"
