--- a/Left 4 Dead 2/binds.cfg
+++ b/Left 4 Dead 2/binds.cfg
@@ -17,7 +17,7 @@ alias checkright "none"
 alias none ""
 
 echo "Binds"
-echo "Fixing invisible SI, most vulnerable SI is - Tank. Somehow, it also lowers your ping"
+echo "Fixes invisible SI, most vulnerable SI is: Tank. Somehow, it also lowers your ping"
 bind "F5" "recordfix"
 bind "TAB" "+showscores_custom"
 echo "Fixing sound position because of DSP"
