--- a/Left 4 Dead 2/glow.cfg
+++ b/Left 4 Dead 2/glow.cfg
@@ -1,3 +1,4 @@
+echo "https://github.com/V3nilla"
 cl_glow_ghost_infected_r "1.00"
 cl_glow_ghost_infected_g "1.00"
 cl_glow_ghost_infected_b "1.00"
