--- a/Left 4 Dead 2/binds.cfg
+++ b/Left 4 Dead 2/binds.cfg
@@ -1,3 +1,4 @@
+echo "https://github.com/V3nilla"
 echo "Aliases"
 alias "+showscores_custom" "+showscores; net_graph 3"
 alias "-showscores_custom" "-showscores; net_graph 0"
