--- a/Left 4 Dead 2/binds.cfg
+++ b/Left 4 Dead 2/binds.cfg
@@ -3,19 +3,19 @@ echo "Aliases"
 alias "+showscores_custom" "+showscores; net_graph 3"
 alias "-showscores_custom" "-showscores; net_graph 0"
 alias "recordfix" "r_cleardecals; record demofix; stop"
-alias +mfwd "-back; +forward; alias checkfwd +forward; dsp_volume 0"
-alias +mback "-forward; +back; alias checkback +back; dsp_volume 0"
-alias +mleft "-moveright; +moveleft; alias checkleft +moveleft; dsp_volume 0"
-alias +mright "-moveleft; +moveright; alias checkright +moveright; dsp_volume 0"
-alias -mfwd "-forward; checkback; alias checkfwd none"
-alias -mback "-back; checkfwd; alias checkback none"
-alias -mleft "-moveleft; checkright; alias checkleft none"
-alias -mright "-moveright; checkleft; alias checkright none"
-alias checkfwd "none"
-alias checkback "none"
-alias checkleft "none"
-alias checkright "none"
-alias none ""
+alias "+mfwd" "-back; +forward; alias checkfwd +forward; dsp_volume 0"
+alias "+mback" "-forward; +back; alias checkback +back; dsp_volume 0"
+alias "+mleft" "-moveright; +moveleft; alias checkleft +moveleft; dsp_volume 0"
+alias "+mright" "-moveleft; +moveright; alias checkright +moveright; dsp_volume 0"
+alias "-mfwd" "-forward; checkback; alias checkfwd none"
+alias "-mback" "-back; checkfwd; alias checkback none"
+alias "-mleft" "-moveleft; checkright; alias checkleft none"
+alias "-mright" "-moveright; checkleft; alias checkright none"
+alias "checkfwd" "none"
+alias "checkback" "none"
+alias "checkleft" "none"
+alias "checkright" "none"
+alias "none" ""
 
 echo "Binds"
 echo "Fixes invisible SI, most vulnerable SI is: Tank. Somehow, it also lowers your ping"
