--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -35,7 +35,7 @@ echo "ui_setting_advertiseforhire_auto = Looking to Play when Counter-Strike Sta
 echo "cl_player_ping_mute = Player Pings - 2 = DISABLED"
 echo "cl_hud_radar_map_additive = Radar Hud Map Blends With Background"
 echo "cl_hud_radar_blur_background = Blur Background"
-echo "needrop is now playerradio Radio.NeedDrop"
+echo "needrop is now playerchatwheel CW.NeedDrop #Chatwheel_requestweapon"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
@@ -187,11 +187,12 @@ bind end "+radialradio2"
 bind pgdn "+radialradio3"
 bind "KP_2" "report"
 bind "KP_3" "reportingin"
-bind "KP_4" "playerchatwheel CW.NeedQuiet"
+bind "KP_4" "playerchatwheel CW.NeedQuiet #Chatwheel_quiet"
 bind "KP_5" "coverme"
 bind "KP_6" "getout"
-bind "KP_7" "playerradio Radio.NeedDrop"
+bind "KP_7" "playerchatwheel CW.NeedDrop #Chatwheel_requestweapon"
 bind "KP_8" "regroup"
 bind "KP_9" "takingfire"
+bind "pgup" "enemydown"
 
 viewmodel_presetpos 2
