--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -194,5 +194,7 @@ bind "KP_7" "playerchatwheel CW.NeedDrop #Chatwheel_requestweapon"
 bind "KP_8" "regroup"
 bind "KP_9" "takingfire"
 bind "pgup" "enemydown"
+bind "home" "playerchatwheel CW.Sorry #Chatwheel_sorry"
+bind "ins" "playerchatwheel CW.EcoRound #Chatwheel_requestecoround"
 
 viewmodel_presetpos 2
