--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -37,6 +37,7 @@ echo "cl_hud_radar_map_additive = Radar Hud Map Blends With Background"
 echo "cl_hud_radar_blur_background = Blur Background"
 echo "needrop is now playerchatwheel CW.NeedDrop #Chatwheel_requestweapon"
 echo "snd_deathcamera_volume: disable death sound when killed"
+echo "snd_roundstart_volume: disable respawn music each round"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
@@ -128,7 +129,7 @@ snd_mapobjective_volume "0"
 snd_menumusic_volume "0"
 snd_musicvolume "1"
 snd_mvp_volume "1"
-snd_roundaction_volume "1"
+snd_roundaction_volume "0"
 snd_roundend_volume "1"
 snd_roundstart_volume "1"
 snd_steamaudio_reverb_level_db "-3"
