--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -37,7 +37,7 @@ echo "cl_hud_radar_map_additive = Radar Hud Map Blends With Background"
 echo "cl_hud_radar_blur_background = Blur Background"
 echo "needrop is now playerchatwheel CW.NeedDrop #Chatwheel_requestweapon"
 echo "snd_deathcamera_volume: disable death sound when killed"
-echo "snd_roundstart_volume: disable respawn music each round"
+echo "snd_roundstart_volume: disable respawn music each round that stops playing after moving"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
