--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -38,6 +38,7 @@ echo "cl_hud_radar_blur_background = Blur Background"
 echo "needrop is now playerchatwheel CW.NeedDrop #Chatwheel_requestweapon"
 echo "snd_deathcamera_volume: disable death sound when killed"
 echo "snd_roundstart_volume: disable respawn music each round that stops playing after moving"
+echo "snd_roundaction_volume: disable respawn music each round that starts playing after moving"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
@@ -121,7 +122,7 @@ r_drawtracers_firstperson "0"
 r_player_visibility_mode "0"
 r_show_build_info "0"
 sensitivity "4"
-snd_deathcamera_volume "0"
+snd_deathcamera_volume "0.1"
 snd_ducktovolume "0.55"
 snd_gamevoicevolume "1"
 snd_gamevolume "1"
@@ -131,7 +132,7 @@ snd_musicvolume "1"
 snd_mvp_volume "1"
 snd_roundaction_volume "0"
 snd_roundend_volume "1"
-snd_roundstart_volume "1"
+snd_roundstart_volume "0"
 snd_steamaudio_reverb_level_db "-3"
 snd_steamaudio_enable_perspective_correction "0"
 snd_spatialize_lerp "1"
