--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -39,6 +39,7 @@ echo "needrop is now playerchatwheel CW.NeedDrop #Chatwheel_requestweapon"
 echo "snd_deathcamera_volume: disable death sound when killed"
 echo "snd_roundstart_volume: disable respawn music each round that stops playing after moving"
 echo "snd_roundaction_volume: disable respawn music each round that starts playing after moving"
+echo "snd_mapobjective_volume: disable music playing after c4 is planted"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
