--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -128,7 +128,8 @@ snd_ducktovolume "0.55"
 snd_gamevoicevolume "1"
 snd_gamevolume "1"
 snd_mapobjective_volume "0"
-snd_menumusic_volume "0"
+snd_menumap_volume "1"
+snd_menumusic_volume "1"
 snd_musicvolume "1"
 snd_mvp_volume "1"
 snd_roundaction_volume "0"
