--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -40,6 +40,8 @@ echo "snd_deathcamera_volume: disable death sound when killed"
 echo "snd_roundstart_volume: disable respawn music each round that stops playing after moving"
 echo "snd_roundaction_volume: disable respawn music each round that starts playing after moving"
 echo "snd_mapobjective_volume: disable music playing after c4 is planted"
+echo "snd_menumusic_volume: disable main menu music"
+echo "snd_roundend_volume: disable music at the end of the game (8 rounds)"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
@@ -138,7 +140,7 @@ snd_roundstart_volume "0"
 snd_steamaudio_reverb_level_db "-3"
 snd_steamaudio_enable_perspective_correction "0"
 snd_spatialize_lerp "1"
-snd_tensecondwarning_volume "0.04"
+snd_tensecondwarning_volume "1"
 snd_toolvolume "1"
 snd_headphone_eq "0"
 snd_voipvolume "1.0"
