--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -112,6 +112,7 @@ fps_max "999"
 gameinstructor_enable "0"
 hud_scaling "1"
 joystick "0"
+mat_disable_fancy_blendibg "1"
 net_allow_multicast "0"
 net_showudp "0"
 net_showudp_remoteonly "0"
