--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -122,6 +122,7 @@ r_csgo_cmaa_extra_sharp "0"
 r_csgo_cmaa_quality "0"
 r_drawtracers "1"
 r_drawtracers_firstperson "0"
+r_dynamic "0"
 r_player_visibility_mode "0"
 r_show_build_info "0"
 sensitivity "4"
