--- a/Counter-Strike 2/autoexec.cfg
+++ b/Counter-Strike 2/autoexec.cfg
@@ -41,6 +41,8 @@ echo "snd_roundstart_volume: disable respawn music each round that stops playing
 echo "snd_roundaction_volume: disable respawn music each round that starts playing after moving"
 echo "snd_mapobjective_volume: disable music playing after c4 is planted"
 echo "snd_menumusic_volume: disable main menu music, team select music"
+echo "violence_ablood: toggle showing alien blood"
+echo "violence_hblood: toggle showing human blood"
 
 echo "DONT FORGET cs2_video.txt: C:\Program Files (x86)\Steam\userdata\:USERID:\730\local\cfg"
 
@@ -157,6 +159,10 @@ rate "1048576"
 ui_setting_advertiseforhire_auto "0"
 ui_vanitysetting_team "ct"
 ui_vanitysetting_loadoutslot_ct "rifle1"
+violence_ablood "0"
+violence_hblood "0"
+violence_agibs "0"
+violence_hgibs "0"
 volume "1"
 
 bind w "+forward"
